# simdjsonpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
benchmarks/: compare_parsers.py
docs/: README.md  benchmarks.md  common.md  development.md  dom.md  error-handling.md  index.md  loads.md  ondemand.md  quickstart.md  security.md  streaming.md  threading.md
fuzz/: run_api_stress.py
simdjsonpy/: __init__.py  dom.py  ondemand.py
src/: bind_common.cpp  bind_dom.cpp  bind_ondemand.cpp  common.h  dom.h  module.cpp  ondemand.h
tests/: test_fuzz_properties.py  test_simdjsonpy.py
